# part-2

./: 01. Linear Regression.ipynb  02. Exercise - Seoul Bike Sharing - sol.ipynb  02. Exercise - Seoul Bike Sharing.ipynb  03. Basis Functions and Feature Engineering.ipynb  04. Categorical Values and Logistic Regression.ipynb  05. Exercise - Seoul Bike Sharing (Categorical Attributes) - sol.ipynb  05. Exercise - Seoul Bike Sharing (Categorical Attributes).ipynb  06. Generalized Linear Models.ipynb  07. Exercise - Seoul Bike Sharing (LASSO) - sol.ipynb  07. Exercise - Seoul Bike Sharing (LASSO).ipynb  pyproject.toml  requirements.txt
